--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,14 @@
             <version>${playwright.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.15.3</version>
+        </dependency>
+
         <!-- compile only, deployed container will provide this -->
         <!--
         <dependency>
