--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,13 @@
             <version>2.15.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.8.0</version> <!-- La versión podría variar, usa la última disponible -->
+        </dependency>
+
+
         <!-- compile only, deployed container will provide this -->
         <!--
         <dependency>
