--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,13 @@
             <version>2.15.3</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.0</version>
+        </dependency>
+
         <!-- compile only, deployed container will provide this -->
         <!--
         <dependency>
