--- a/pom.xml
+++ b/pom.xml
@@ -132,15 +132,21 @@
             <version>2.13.0</version>
         </dependency>
 
-        <!-- compile only, deployed container will provide this -->
-        <!--
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>${servletapi.version}</version>
-            <scope>provided</scope>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
         </dependency>
-        -->
+
+        <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>javax.activation-api</artifactId>
+            <version>1.2.0</version>
+        </dependency>
+
+
+
+
     </dependencies>
 
     <build>
