--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,12 @@
             <version>4.9.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>5.6.1</version> <!-- Reemplaza con la versión más reciente -->
+        </dependency>
+
 
     </dependencies>
 
